<resources>
    <string name="app_name">ePolitics</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_profile">My Profile</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="profileHead">Profile</string>
    <string name="communicate">Action Center</string>
    <string name="report_issue_to_authority">Report issue to authority</string>
    <string name="your_reports">Your reports</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>